# model--WW

./: .gitignore  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt  requirements_spaces.txt  setup_spaces.py
.github/workflows/: deploy-site.yml  release-desktop.yml  sync-hf-space.yml
configs/: acestep_finetune.yaml  deepspeed_config.json  generation.yaml  model_m_augmented.yaml  model_m_augmented_gh200.yaml  model_s_raw.yaml  model_s_raw_gh200.yaml  train_base.yaml  train_base_optimized.yaml  train_base_safe.yaml  train_large.yaml
desktop/: README.md  REAPER_CONNECTOR.md  index.html  package-lock.json  package.json
desktop/electron/: main.cjs  preload.cjs  reaper_agent.lua
desktop/src/: main.jsx  styles.css
modelw/: __init__.py  acestep_bridge.py  api.py  dataset.py  eval_metrics.py  generate.py  model.py  room.py  tokenizer.py  trainer.py
scripts/: analyze_dataset.py  bootstrap_venv_room.py  bootstrap_venv_room.sh  deploy_lambda.sh  download_lakh.py  evaluate_midi_quality.py  export_onnx.py  generate_audio.py  generate_farm.sh  generate_session_corpus.py  setup_acestep.py  setup_lambda.sh  setup_room.py  test_tokenizer.py  train_lambda.sh  validate_midi.py  verify_room_env.py
site/: CNAME  index.html  styles.css
synthetic/sessions/: example_trap_fullsong.json
tests/: test_core.py
