[project]
name = "model-w"
version = "0.1.0"
description = "MIDI Generation Foundation Model - Conditional generation for DAW workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MODEL-W Team"}
]
keywords = ["midi", "music-generation", "transformer", "deep-learning"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelw*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

